feat: add lza config

--- a/cdk/package.json
+++ b/cdk/package.json
@@ -1,7 +1,7 @@
 {
   "name": "superwerker-cdk-poc",
   "scripts": {
-    "synth": "cdk synth",
+    "synth": "cdk synth --version-reporting false",
     "test": "make test && jest --silent",
     "publish-assets": "npx ts-node -P tsconfig.json --prefer-ts-exts src/scripts/publish-assets.ts",
     "publish-assets-testing": "npx ts-node -P tsconfig.json --prefer-ts-exts src/scripts/publish-assets-testing.ts",
