--- a/templates/budget.yaml
+++ b/templates/budget.yaml
@@ -1,19 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Transform: AWS::Serverless-2016-10-31
-Description: Sets up Budget pieces for account management. (qs-1s3rsr7io)
-
-Metadata:
-  SuperwerkerVersion: 0.0.0-DEVELOPMENT
-  cfn-lint:
-    config:
-      ignore_checks:
-        - E9007
-
-Parameters:
-  BudgetLimitInUSD:
-    Default: 100
-    Description: Initial value. Will be overwritten by the scheduled lambda function.
-    Type: String
+Description: Sets up Budget that creates OpsItem when forecasted budget exceeds 105% previous three months average
 
 Resources:
   BudgetAlarm:
@@ -33,106 +20,6 @@ Resources:
       Statistic: Sum
       Threshold: 0
       TreatMissingData: missing # currently CW does not auto close ops items where it's alert transitions back to OK - but still transition back after one (1) initial SNS notification from budgets to "Ok" would communicate wrong semantics;
-
-  BudgetLambda:
-    Type: AWS::Serverless::Function
-    Properties:
-      Environment:
-        Variables:
-          StackName: !Sub ${AWS::StackName}
-      Events:
-        Schedule:
-          Type: Schedule
-          Properties:
-            Schedule: cron(0 0 L * ? *)
-      Handler: index.handler
-      InlineCode: |
-        from dateutil.relativedelta import *
-        import boto3
-        import datetime
-        import json
-        import os
-
-        def handler(event, context):
-
-          ce = boto3.client('ce')
-
-          end = datetime.date.today().replace(day=1)
-          start = end + relativedelta(months=-3)
-
-          start = start.strftime("%Y-%m-%d")
-          end = end.strftime("%Y-%m-%d")
-
-          response = ce.get_cost_and_usage(
-              Granularity='MONTHLY',
-              Metrics=[
-                  'UnblendedCost',
-              ],
-              TimePeriod={
-                  'Start': start,
-                  'End': end,
-              },
-          )
-
-          avg = 0
-
-          for result in response['ResultsByTime']:
-              total = result['Total']
-              cost = total['UnblendedCost']
-              amount = int(float(cost['Amount']))
-              avg = avg + amount
-
-          avg = int(avg/3)
-          budget = str(avg)
-
-          stack_name = os.environ['StackName']
-
-          log({
-              'average': avg,
-              'budget': budget,
-              'end': end,
-              'event': event,
-              'level': 'debug',
-              'stack': stack_name,
-              'start': start,
-          })
-
-          cf = boto3.client('cloudformation')
-
-          cf.update_stack(
-            Capabilities=[
-              'CAPABILITY_IAM',
-            ],
-            Parameters=[
-              {
-                'ParameterKey': 'BudgetLimitInUSD',
-                'ParameterValue': budget,
-              }
-            ],
-            StackName=stack_name,
-            UsePreviousTemplate=True,
-          )
-
-        def log(msg):
-          print(json.dumps(msg), flush=True)
-
-      Runtime: python3.9
-      Policies:
-        - Version: 2012-10-17
-          Statement:
-            - Effect: Allow
-              Action:
-                - ce:GetCostAndUsage
-              Resource: '*'
-            - Effect: Allow
-              Action:
-                - budgets:ModifyBudget
-              Resource: !Sub arn:${AWS::Partition}:budgets::${AWS::AccountId}:budget/${BudgetReport}
-            - Effect: Allow
-              Action:
-                - cloudformation:UpdateStack
-              Resource: !Sub ${AWS::StackId}
-      Timeout: 10
 
   BudgetNotification:
     Type: AWS::SNS::Topic
@@ -154,19 +41,20 @@ Resources:
     Type: AWS::Budgets::Budget
     Properties:
       Budget:
-        BudgetLimit:
-          Amount: !Ref BudgetLimitInUSD
-          Unit: USD
         BudgetType: COST
         CostTypes:
           IncludeCredit: false
           IncludeRefund: false
         TimeUnit: MONTHLY
+        AutoAdjustData:
+          AutoAdjustType: HISTORICAL
+          HistoricalOptions:
+              BudgetAdjustmentPeriod: 3
       NotificationsWithSubscribers:
         - Notification:
             ComparisonOperator: GREATER_THAN
             NotificationType: FORECASTED
-            Threshold: 100
+            Threshold: 105
           Subscribers:
             - SubscriptionType: SNS
               Address: !Ref BudgetNotification
