--- a/cdk/src/functions/configure_landing_zone_accelerator/config/best-practices/customizations-config.yaml
+++ b/cdk/src/functions/configure_landing_zone_accelerator/config/best-practices/customizations-config.yaml
@@ -6,9 +6,9 @@ customizations:
         - {{REGION}}
       deploymentTargets:
         organizationalUnits:
-          - Root
+          - Security
       runOrder: 1
-      template: ./iam-access-analyzer.yaml
+      template: ./cloudformation/iam-access-analyzer.yaml
       terminationProtection: false
   cloudFormationStackSets: []
   serviceCatalogPortfolios: []
