--- a/cdk/tsconfig.json
+++ b/cdk/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "rootDir": "src",
+    "rootDirs": ["src", "test"],
     "outDir": "lib",
     "alwaysStrict": true,
     "declaration": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
-    "inlineSourceMap": true,
-    "inlineSources": true,
+    "sourceMap": true,
     "lib": [
       "es2022"
     ],
@@ -31,6 +30,8 @@
     "test/**/*.ts"
   ],
   "exclude": [
-    "cdk.out"
+    "cdk.out",
+    "node_modules",
+    "lib"
   ]
 }
