fix: refactored bootstrap lambda to use sdk v3 refactored email lambda to use sdk types improved eslint configuration to not produce false positives made python test scripts less verbose added environement variable switch for publish assets script

--- a/cdk/.eslintrc.json
+++ b/cdk/.eslintrc.json
@@ -12,7 +12,7 @@
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
-    "project": "./tsconfig.dev.json"
+    "project": "**/tsconfig.json"
   },
   "extends": [
     "plugin:import/typescript"
@@ -25,9 +25,11 @@
       ]
     },
     "import/resolver": {
-      "node": {},
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx", ".d.ts"]
+      },
       "typescript": {
-        "project": "./tsconfig.dev.json",
+        "project": "**/tsconfig.json",
         "alwaysTryTypes": true
       }
     }
