--- a/cdk/package.json
+++ b/cdk/package.json
@@ -33,11 +33,12 @@
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
+    "@aws-sdk/client-eventbridge": "^3.470.0",
     "@aws-sdk/client-organizations": "^3.468.0",
+    "@aws-sdk/client-ssm": "^3.470.0",
     "@types/aws-lambda": "^8.10.109",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.96.2",
-    "aws-sdk": "^2.1297.0",
     "axios": "^1.2.3",
     "cdk-assets": "^2.96.2",
     "constructs": "^10.1.224",
