--- a/cdk/package.json
+++ b/cdk/package.json
@@ -14,7 +14,6 @@
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
-    "aws-cdk": "^2.96.2",
     "aws-sdk-client-mock": "^3.0.0",
     "aws-sdk-client-mock-jest": "^3.0.0",
     "esbuild": "^0.17.3",
@@ -38,11 +37,13 @@
     "@aws-sdk/client-ssm": "^3.470.0",
     "@types/aws-lambda": "^8.10.109",
     "async-retry": "^1.3.3",
-    "aws-cdk-lib": "^2.96.2",
+    "aws-cdk-lib": "^2.115.0",
     "axios": "^1.2.3",
-    "cdk-assets": "^2.96.2",
+    "cdk-assets": "^2.115.0",
     "constructs": "^10.1.224",
-    "uuid4": "^2.0.3"
+    "handlebars": "^4.7.8",
+    "uuid4": "^2.0.3",
+    "yaml": "^2.3.4"
   },
   "license": "Apache-2.0",
   "version": "0.0.0"
