feat: inital LZA feature set

--- a/cdk/src/functions/configure_landing_zone_accelerator/config/best-practices/customizations-config.yaml
+++ b/cdk/src/functions/configure_landing_zone_accelerator/config/best-practices/customizations-config.yaml
@@ -8,7 +8,7 @@ customizations:
         organizationalUnits:
           - Security
       runOrder: 1
-      template: ./cloudformation/iam-access-analyzer.yaml
+      template: /cloudformation/iam-access-analyzer.yaml
       terminationProtection: false
   cloudFormationStackSets: []
   serviceCatalogPortfolios: []
