--- a/cdk/src/functions/configure_landing_zone_accelerator/config/best-practices/global-config.yaml
+++ b/cdk/src/functions/configure_landing_zone_accelerator/config/best-practices/global-config.yaml
@@ -1,8 +1,16 @@
-homeRegion: eu-central-1
+homeRegion: &HOME_REGION { { REGION } }
 enabledRegions:
-  - eu-central-1
+  - *HOME_REGION
 managementAccountAccessRole: AWSControlTowerExecution
-cloudwatchLogRetentionInDays: 365 # REDUCED FROM 3653 check how this is set?
+cloudwatchLogRetentionInDays: 365 # REDUCED FROM 3653
+snsTopics:
+  deploymentTargets:
+    accounts:
+      - Management
+  topics:
+    - name: Security
+      emailAddresses:
+        - { { AUDIT_MAIL } } # TODO: auto subscribe to Accelerator Security Topic
 cdkOptions:
   centralizeBuckets: true
   useManagementAccessRole: true
@@ -28,10 +36,13 @@ logging:
     lifecycleRules: []
   sessionManager:
     sendToCloudWatchLogs: false
-    sendToS3: false
-    excludeRegions: []
-    excludeAccounts: []
-    lifecycleRules: []
-    attachPolicyToIamRoles: []
+    sendToS3: true
+    lifecycleRules:
+      - enabled: true
+        abortIncompleteMultipartUpload: 7
+        expiration: 30
+        noncurrentVersionExpiration: 30
+    attachPolicyToIamRoles:
+      - EC2-Sessions-Manager-Role
 tags: []
 iamRoleSsmParameters: []
