fix: set email bucket deletion policy to retain

--- a/templates/rootmail.yaml
+++ b/templates/rootmail.yaml
@@ -21,6 +21,7 @@ Resources:
 
   EmailBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
     Properties:
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
