--- a/templates/rootmail.yaml
+++ b/templates/rootmail.yaml
@@ -22,6 +22,7 @@ Resources:
   EmailBucket:
     Type: AWS::S3::Bucket
     DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
