build: added script for living documentation dashboard

--- a/cdk/package.json
+++ b/cdk/package.json
@@ -42,6 +42,7 @@
     "axios": "^1.2.3",
     "cdk-assets": "^2.96.2",
     "constructs": "^10.1.224",
+    "endent": "^2.1.0",
     "uuid4": "^2.0.3"
   },
   "license": "Apache-2.0",
