--- a/cdk/package.json
+++ b/cdk/package.json
@@ -13,6 +13,7 @@
     "@types/async-retry": "^1.4.5",
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
+    "@types/unzipper": "^0.10.9",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "aws-cdk": "^2.96.2",
@@ -34,9 +35,12 @@
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
+    "@aws-sdk/client-cloudformation": "^3.484.0",
+    "@aws-sdk/client-codecommit": "^3.484.0",
     "@aws-sdk/client-eventbridge": "^3.470.0",
     "@aws-sdk/client-organizations": "^3.468.0",
-    "@aws-sdk/client-ssm": "^3.470.0",
+    "@aws-sdk/client-s3": "^3.484.0",
+    "@aws-sdk/client-ssm": "^3.484.0",
     "@types/aws-lambda": "^8.10.109",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.96.2",
