--- a/cdk/package.json
+++ b/cdk/package.json
@@ -7,6 +7,7 @@
     "prepare": "cd .. && husky install cdk/.husky"
   },
   "devDependencies": {
+    "@aws-sdk/client-cloudwatch": "^3.485.0",
     "@commitlint/cli": "^17.4.2",
     "@commitlint/config-conventional": "^17.4.2",
     "@types/async-retry": "^1.4.5",
