feat: Integrate Control Tower into Cloudformation (#423)
* feat: first iteration to use cfn for control tower

* feat: added parameter for organisation create

* fix: set email bucket deletion policy to retain

* fix: eslint and cfn-lint fixes

* fix: eslint superwerker.ts

* feat: create ssm parameter for accounts via cdk
remove obsolete enable_controltower lambda
refactor superwerker-bootstrap-function to only send event for guardduty and backup features

* feat: enable upgrade path for stack
move organizations to control tower stack
remove account lookup from generate-amail-address lambda as it is only triggered on create anyway

* feat: created control tower cloudformation ADR

* feat: apply remove policy and set simple name for all resources

* feat: use inline policies to allow importing

* feat: added upgrade instructions

* feat: improved update instructions

BREAKING CHANGE: landing zone now managed by cloudformation

* feat: added drift documentation

--- a/templates/rootmail.yaml
+++ b/templates/rootmail.yaml
@@ -21,6 +21,8 @@ Resources:
 
   EmailBucket:
     Type: AWS::S3::Bucket
+    DeletionPolicy: Retain
+    UpdateReplacePolicy: Retain
     Properties:
       PublicAccessBlockConfiguration:
         BlockPublicAcls: true
