--- a/cdk/package.json
+++ b/cdk/package.json
@@ -15,8 +15,6 @@
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "aws-cdk": "^2.96.2",
-    "aws-sdk-client-mock": "^3.0.0",
-    "aws-sdk-client-mock-jest": "^3.0.0",
     "esbuild": "^0.17.3",
     "eslint": "^8.32.0",
     "eslint-import-resolver-node": "^0.3.7",
@@ -33,13 +31,16 @@
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
-    "@aws-sdk/client-cloudwatch": "^3.490.0",
-    "@aws-sdk/client-eventbridge": "^3.490.0",
-    "@aws-sdk/client-organizations": "^3.490.0",
-    "@aws-sdk/client-ssm": "^3.490.0",
+    "@aws-sdk/client-cloudwatch": "^3.495.0",
+    "@aws-sdk/client-eventbridge": "^3.495.0",
+    "@aws-sdk/client-organizations": "^3.495.0",
+    "@aws-sdk/client-sns": "^3.495.0",
+    "@aws-sdk/client-ssm": "^3.495.0",
     "@types/aws-lambda": "^8.10.109",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.96.2",
+    "aws-sdk-client-mock": "^3.0.1",
+    "aws-sdk-client-mock-jest": "^3.0.1",
     "axios": "^1.2.3",
     "cdk-assets": "^2.96.2",
     "constructs": "^10.1.224",
