--- a/cdk/package.json
+++ b/cdk/package.json
@@ -27,7 +27,9 @@
     "npm-check-updates": "^16.6.2",
     "ts-jest": "^29.0.5",
     "ts-node": "^10",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "aws-sdk-client-mock": "^3.0.1",
+    "aws-sdk-client-mock-jest": "^3.0.1"
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
@@ -39,8 +41,6 @@
     "@types/aws-lambda": "^8.10.109",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.115.0",
-    "aws-sdk-client-mock": "^3.0.1",
-    "aws-sdk-client-mock-jest": "^3.0.1",
     "axios": "^1.2.3",
     "cdk-assets": "^2.115.0",
     "constructs": "^10.1.224",
