--- a/cdk/package.json
+++ b/cdk/package.json
@@ -4,7 +4,9 @@
     "synth": "cdk synth --version-reporting false",
     "test": "make test && jest --silent",
     "publish-assets": "npx ts-node -P tsconfig.json --prefer-ts-exts src/scripts/publish-assets.ts",
-    "prepare": "cd .. && husky install cdk/.husky"
+    "prepare": "cd .. && husky install cdk/.husky",
+    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+    "format": "prettier --write ."
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.2",
@@ -18,16 +20,24 @@
     "aws-sdk-client-mock-jest": "^3.0.0",
     "esbuild": "^0.17.3",
     "eslint": "^8.32.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-node": "^0.3.7",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^5.1.3",
     "husky": "^8.0.0",
     "jest": "^29.3.1",
     "jest-junit": "^15.0.0",
     "json-schema": "^0.4.0",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
     "ts-jest": "^29.0.5",
     "ts-node": "^10",
     "typescript": "^4.9.4"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js}": "yarn lint",
+    "*.css": "yarn format"
   },
   "dependencies": {
     "@aws-cdk/aws-lambda-python-alpha": "^2.66.1-alpha.0",
