--- a/cdk/package.json
+++ b/cdk/package.json
@@ -48,6 +48,7 @@
     "@types/aws-lambda": "^8.10.109",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.115.0",
+    "axios": "^1.6.7",
     "cdk-assets": "^2.115.0",
     "constructs": "^10.1.224",
     "endent": "^2.1.0",
