--- a/cdk/package.json
+++ b/cdk/package.json
@@ -13,6 +13,7 @@
     "@commitlint/config-conventional": "^17.4.2",
     "@types/async-retry": "^1.4.5",
     "@types/jest": "^29.2.6",
+    "@types/mailparser": "^3.4.4",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
@@ -47,10 +48,12 @@
     "@types/aws-lambda": "^8.10.109",
     "async-retry": "^1.3.3",
     "aws-cdk-lib": "^2.115.0",
+    "aws-sdk": "^2.1557.0",
     "cdk-assets": "^2.115.0",
     "constructs": "^10.1.224",
     "endent": "^2.1.0",
     "handlebars": "^4.7.8",
+    "mailparser": "^3.6.7",
     "uuid4": "^2.0.3",
     "yaml": "^2.3.4"
   },
