--- a/cdk/superwerker-distribution/cdk-bootstrap.yaml
+++ b/cdk/superwerker-distribution/cdk-bootstrap.yaml
@@ -2,7 +2,12 @@ Resources:
   BootStrapBucket:
     Type: AWS::S3::Bucket
     Properties:
-      BucketName: !Sub 'superwerker-assets-${AWS::Region}'
+      BucketName: !Sub 'superwerker-resources-${AWS::Region}'
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: false
+        IgnorePublicAcls: false
+        BlockPublicPolicy: false
+        RestrictPublicBuckets: false
     UpdateReplacePolicy: Retain
     DeletionPolicy: Retain
   BootStrapBucketPolicy:
@@ -15,12 +20,12 @@ Resources:
           - Action: s3:GetObject
             Effect: Allow
             Principal:
-              AWS: "*"
+              AWS: '*'
             Resource:
               Fn::Join:
-                - ""
+                - ''
                 - - Fn::GetAtt:
                       - BootStrapBucket
                       - Arn
                   - /*
-        Version: "2012-10-17"
+        Version: '2012-10-17'
